--- a/EndProjectOrgani/EndProjectOrgani.csproj
+++ b/EndProjectOrgani/EndProjectOrgani.csproj
@@ -42,6 +42,7 @@
     <None Remove="Views\Contact\" />
     <None Remove="Views\Blog\" />
     <None Remove="Views\Account\" />
+    <None Remove="ViewComponents\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Home\" />
@@ -91,6 +92,7 @@
     <Folder Include="Views\Contact\" />
     <Folder Include="Views\Blog\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="ViewComponents\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\" />
