--- a/EndProjectOrgani/EndProjectOrgani.csproj
+++ b/EndProjectOrgani/EndProjectOrgani.csproj
@@ -44,6 +44,11 @@
     <None Remove="Views\Account\" />
     <None Remove="ViewComponents\" />
     <None Remove="Views\Product\" />
+    <None Remove="Microsoft.AspNetCore.Identity" />
+    <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <None Remove="MimeKit" />
+    <None Remove="MailKit" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Home\" />
@@ -95,6 +100,7 @@
     <Folder Include="Views\Account\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Product\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\" />
@@ -123,5 +129,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.25" />
+    <PackageReference Include="MimeKit" Version="3.3.0" />
+    <PackageReference Include="MailKit" Version="3.3.0" />
   </ItemGroup>
 </Project>
